# Qtodo

./: CMakeLists.txt  Images.qrc  Qtodo.pro  README.md  citem.cpp  citem.h  dialog.cpp  dialog.h  dialog.ui  item_display.cpp  item_display.h  item_display.ui  main.cpp  qtodo.cpp  qtodo.h  qtodo.ui  reminder.cpp  reminder.h  reminder.ui  timetable.cpp  timetable.h  timetable.ui
